[gd_scene load_steps=2 format=2]

[ext_resource path="res://GOPEditor.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Main" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_right = 236.0
margin_bottom = 40.0

[node name="TitleBar" type="HBoxContainer" parent="Main"]
margin_right = 219.0
margin_bottom = 23.0

[node name="VBoxContainer" type="HBoxContainer" parent="Main/TitleBar"]
margin_right = 219.0
margin_bottom = 23.0
rect_min_size = Vector2( 100, 0 )

[node name="FileOpen" type="Button" parent="Main/TitleBar/VBoxContainer"]
margin_right = 72.0
margin_bottom = 23.0
text = "Open..."

[node name="FileSave" type="Button" parent="Main/TitleBar/VBoxContainer"]
margin_left = 76.0
margin_right = 124.0
margin_bottom = 23.0
text = "Save"

[node name="FileSaveAs" type="Button" parent="Main/TitleBar/VBoxContainer"]
margin_left = 128.0
margin_right = 219.0
margin_bottom = 23.0
text = "Save As..."

[node name="ScrollContainer" type="ScrollContainer" parent="Main"]
margin_top = 27.0
margin_right = 219.0
margin_bottom = 27.0
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="Main/ScrollContainer"]

[node name="LineEdit" type="TextEdit" parent="Main/ScrollContainer/VBoxContainer"]

[node name="OpenFile" type="FileDialog" parent="."]
margin_left = 99.0
margin_top = 158.0
margin_right = 414.0
margin_bottom = 288.0
rect_min_size = Vector2( 400, 400 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.gop" )

[node name="SaveFile" type="FileDialog" parent="."]
margin_left = 99.0
margin_top = 158.0
margin_right = 414.0
margin_bottom = 288.0
rect_min_size = Vector2( 400, 400 )
resizable = true
access = 2
filters = PoolStringArray( "*.gop" )

[connection signal="pressed" from="Main/TitleBar/VBoxContainer/FileOpen" to="." method="_on_FileOpen_pressed"]
[connection signal="pressed" from="Main/TitleBar/VBoxContainer/FileSave" to="." method="_on_FileSave_pressed"]
[connection signal="pressed" from="Main/TitleBar/VBoxContainer/FileSaveAs" to="." method="_on_FileSaveAs_pressed"]
[connection signal="confirmed" from="OpenFile" to="." method="_on_OpenFile_confirmed"]
[connection signal="confirmed" from="SaveFile" to="." method="_on_SaveFile_confirmed"]
